# ChangeLog for media-sound/mpc
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mpc/ChangeLog,v 1.36 2006/09/17 20:01:41 ticho Exp $

*mpc-0.12.0_rc2 (17 Sep 2006)

  17 Sep 2006; <ticho@gentoo.org> +mpc-0.12.0_rc2.ebuild:
  New RC.

*mpc-0.12.0_rc1 (13 Aug 2006)

  13 Aug 2006; Andrej Kacian <ticho@gentoo.org> +mpc-0.12.0_rc1.ebuild:
  Version bump to new release candidate.

  07 Feb 2006; Simon Stelling <blubb@gentoo.org> mpc-0.11.2-r1.ebuild:
  stable on amd64

  17 Jan 2006; Guy Martin <gmsoft@gentoo.org> mpc-0.11.2-r1.ebuild:
  Stable on hppa.

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> mpc-0.11.2-r1.ebuild:
  Stable on ppc.

  09 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org> mpc-0.11.2-r1.ebuild:
  Stable on sparc

  09 Jan 2006; Andrej Kacian <ticho@gentoo.org> mpc-0.11.2-r1.ebuild:
  Stable on x86.

*mpc-0.11.2-r1 (16 Oct 2005)

  16 Oct 2005; Andrej Kacian <ticho@gentoo.org> +mpc-0.11.2-r1.ebuild:
  Added nls USE flag to the ebuild and --disable-dependency-tracking to econf.
  Closes bug #108822, reported by Natanael Copa <natanael.copa at gmail.com>.

  22 May 2005; Guy Martin <gmsoft@gentoo.org> mpc-0.11.2.ebuild:
  Stable on hppa.

  01 May 2005; Michael Hanselmann <hansmi@gentoo.org> mpc-0.11.2.ebuild:
  Stable on ppc.

*mpc-0.11.2 (12 Mar 2005)

  12 Mar 2005; Thomas Matthijs <axxo@gentoo.org> +mpc-0.11.2.ebuild:
  version bump

  11 Feb 2005; Thomas Matthijs <axxo@gentoo.org> mpc-0.11.1.ebuild:
  enable bash completing w/ bash-completion-config

  19 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org> -mpc-0.10.3.ebuild,
  -mpc-0.11.0.ebuild, -mpc-0.9.2.ebuild:
  Removing old versions.

  03 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> mpc-0.11.1.ebuild:
  Stable amd64, sparc, x86.

  12 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> mpc-0.11.1.ebuild:
  ~sparc ~amd64

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> mpc-0.10.3.ebuild,