@@ -1,0 +1,3 @@
+MD5 9ec03c5f3d136a9a58ef665dfb100e52 mpc-0.12.0.tar.bz2 87904
+RMD160 c6b7178a5c0c42de878e4204134142b98fec80df mpc-0.12.0.tar.bz2 87904
+SHA256 55bdff5fefa619682c4da7cf25c8e1281f21f405e98580b24d3cfb7ff781a87d mpc-0.12.0.tar.bz2 87904
